--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,67 @@
         </div>
       </div>
     </div>
+    <section class="news">
+      <div class="container">
+        <h2 class="title">Новости</h2>
+        <div class="line"></div>
+        <div class="news__wrapper">
+          <div class="news__item">
+            <div class="news__img">
+              <img src="img/news1.jpg" alt="photo_news" />
+            </div>
+            <div class="news__data">
+              <div class="news__title">Медведь сьел мужчину</div>
+              <div class="news__time">14 июля | 2020</div>
+              <div class="news__text">
+                в общем, что хочу сказать, не понимаю ничеего, но сижу здесь уже
+                5 час хорошо, что во мне кофе, а больше хорошего я пока не
+                нашла, да не нужно наверное, лишь бы в буквы попадала ей богу
+                туда сюда туда сюда, когда юра вернется с работы я превращусь в
+                пиксель или в моду льную сетку и вообще я думаю этого
+                прямоугольни ка для ноdjстей как раз и достаточно
+              </div>
+            </div>
+          </div>
+          <div class="line line__news"></div>
+          <div class="news__item">
+            <div class="news__img">
+              <img src="img/news2.jpg" alt="photo_news" />
+            </div>
+            <div class="news__data">
+              <div class="news__title">Медведь сьел мужчину</div>
+              <div class="news__time">14 июля | 2020</div>
+              <div class="news__text">
+                в общем, что хочу сказать, не понимаю ничеего, но сижу здесь уже
+                5 час хорошо, что во мне кофе, а больше хорошего я пока не
+                нашла, да не нужно наверное, лишь бы в буквы попадала ей богу
+                туда сюда туда сюда, когда юра вернется с работы я превращусь в
+                пиксель или в моду льную сетку и вообще я думаю этого
+                прямоугольни ка для ноdjстей как раз и достаточно
+              </div>
+            </div>
+          </div>
+          <div class="line line__news"></div>
+          <div class="news__item">
+            <div class="news__img">
+              <img src="img/news3.jpg" alt="photo_news" />
+            </div>
+            <div class="news__data">
+              <div class="news__title">Медведь сьел мужчину</div>
+              <div class="news__time">14 июля | 2020</div>
+              <div class="news__text">
+                в общем, что хочу сказать, не понимаю ничеего, но сижу здесь уже
+                5 час хорошо, что во мне кофе, а больше хорошего я пока не
+                нашла, да не нужно наверное, лишь бы в буквы попадала ей богу
+                туда сюда туда сюда, когда юра вернется с работы я превращусь в
+                пиксель или в моду льную сетку и вообще я думаю этого
+                прямоугольни ка для ноdjстей как раз и достаточно
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="js/main.min.js"></script>
 </html>
