--- a/src/index.html
+++ b/src/index.html
@@ -190,6 +190,15 @@
         </div>
       </div>
     </section>
+    <section class="reserve">
+      <div class="container">
+        <div class="reserve__wrapper">
+          <div class="reserve__pc">pc</div>
+          <div class="reserve__ps">ps</div>
+          <div class="reserve_pro">pro</div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="js/main.min.js"></script>
 </html>
