--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 пиксель или в модульную сетку и вообще я думаю этого
                 прямоугольника для ноdjстей как раз и достаточно
               </div>
-              <button class="button__slider">ЧИТАТЬ</button>
+              <button class="button button__slider">ЧИТАТЬ</button>
             </div>
           </div>
           <div class="slider__item">
@@ -57,7 +57,7 @@
                 пиксель или в модульную сетку и вообще я думаю этого
                 прямоугольника для ноdjстей как раз и достаточно
               </div>
-              <button class="button__slider">ЧИТАТЬ</button>
+              <button class="button button__slider">ЧИТАТЬ</button>
             </div>
           </div>
           <div class="slider__item">
@@ -72,7 +72,7 @@
                 пиксель или в модульную сетку и вообще я думаю этого
                 прямоугольника для ноdjстей как раз и достаточно
               </div>
-              <button class="button__slider">ЧИТАТЬ</button>
+              <button class="button button__slider">ЧИТАТЬ</button>
             </div>
           </div>
         </div>
@@ -193,9 +193,26 @@
     <section class="reserve">
       <div class="container">
         <div class="reserve__wrapper">
-          <div class="reserve__pc">pc</div>
+          <div class="reserve__pc">
+            <div class="reserve__title">GAME PC</div>
+            <div class="reserve__time">Утро 07:00 - 14:00</div>
+            <ul class="reserve__morning">
+              <li>1 час | 25 грн</li>
+              <li>2 часа | 40 грн</li>
+              <li>3 часа | 60 грн</li>
+              <li>4 часа |70 грн</li>
+              <li>5 часов | 75 грн</li>
+              <li>6 часов | 75 грн</li>
+            </ul>
+            <div class="line line__reserve"></div>
+            <ul class="reserve__day"></ul>
+            <div class="line line__reserve"></div>
+            <ul class="reserve__night"></ul>
+            <div class="line line__reserve"></div>
+            <button class="button button__reserve">dddddd</button>
+          </div>
           <div class="reserve__ps">ps</div>
-          <div class="reserve_pro">pro</div>
+          <div class="reserve__pro">pro</div>
         </div>
       </div>
     </section>
