final: last adapt

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Document</title>
+    <title>CyberMax Club</title>
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
@@ -258,7 +258,7 @@
       </svg>
       <div class="modal__title">ЗАБРОНИРОВАТЬ</div>
       <form class="modal__form" id="form-contact" method="POST" autocomplete="off">
-        <p class="form-message modal__title"></p>
+        <p class="form-message"></p>
         <input name="name" type="text" class="form-input__name" tabindex="0" placeholder="Введите ваше имя" required />
         <input name="phone" type="tel" class="form-input__phone" tabindex="0" pattern="^[ 0-9]+$" placeholder="Введите ваш телефон" required />
         <input name="theme" type="hidden" class="form-input__theme" value="Бронь с сайта" />
