--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>CyberMax Club</title>
+    <link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
@@ -41,8 +42,8 @@
               <div class="slider__title">Первая всеукраинская клубная лига по CS:GO</div>
               <div class="slider__time">23 июля | 2020</div>
               <div class="slider__text">
-                В лиге будут соревноваться 12 лучших клубов с 12-ти городов Украины! Регистрируйся и играй за звание чемпиона чемпиона клубной лиги с
-                лучшего клуба нашего города - <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>
+                В лиге будут соревноваться 12 лучших клубов с 12-ти городов Украины! Регистрируйся и играй за звание чемпиона клубной лиги с лучшего
+                клуба нашего города - <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
