--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>CyberMax Club</title>
-    <link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icons/ico.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
@@ -12,7 +12,7 @@
     <header>
       <nav class="menu">
         <div class="menu__logo">
-          <img src="img/icons/logo.png" alt="logo" />
+          <a href=""><img src="img/icons/logo.png" alt="logo" /></a>
         </div>
         <ul class="menu__list">
           <li class="menu__item"><a href="#about" class="menu__link">О НАС</a></li>
@@ -76,7 +76,7 @@
         <a class="slider__control slider__control_right" href="#" role="button"></a>
       </div>
     </section>
-    <div class="merit">
+    <section class="merit">
       <div class="container">
         <h1 class="title" id="about">О нас</h1>
         <div class="line"></div>
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="news">
       <div class="container">
         <h2 class="title" id="news">Новости</h2>
@@ -286,26 +286,28 @@
     <!-- Подложка под модальным окном -->
     <div class="overlay js-overlay-modal"></div>
     <footer class="footer" id="footer">
-      <div class="footer__data">
-        <div class="footer__social">
-          <div class="footer__title">НАШИ КОНТАКТЫ</div>
-          <a href="https://instagram.com/cybermax.poltava?igshid=146w6n3jceqgl"
-            ><img src="img/icons/inst.png" alt="inst" class="footer__inst" />cybermax.poltava</a
-          >
-          <a href="380660789897"><img src="img/icons/phone.png" alt="phone" class="footer__phone" />380660789897</a>
-          <a href="mail"><img src="img/icons/mail.png" alt="mail" class="footer__mail" /><span>office@cybermax.club</span> </a>
+      <div class="footer__wrapper">
+        <div class="footer__data">
+          <div class="footer__social">
+            <div class="footer__title">НАШИ КОНТАКТЫ</div>
+            <a href="https://instagram.com/cybermax.poltava?igshid=146w6n3jceqgl"
+              ><img src="img/icons/inst.png" alt="inst" class="footer__inst" />cybermax.poltava</a
+            >
+            <a href="380660789897"><img src="img/icons/phone.png" alt="phone" class="footer__phone" />380660789897</a>
+            <a href="mail"><img src="img/icons/mail.png" alt="mail" class="footer__mail" /><span>office@cybermax.club</span> </a>
+          </div>
+          <div class="footer__place">
+            <div class="footer__title">ЖДЕМ ВАС 24|7 ПО АДРЕСУ</div>
+            <a href="#">г. Полтава, ул. Сковороды 2В</a>
+          </div>
         </div>
-        <div class="footer__place">
-          <div class="footer__title">ЖДЕМ ВАС 24|7 ПО АДРЕСУ</div>
-          <a href="#">г. Полтава, ул. Сковороды 2В</a>
-        </div>
-      </div>
-      <div class="footer__kaktus">
-        <div class="footer__kaktus__wrapper">
-          <div class="footer__kaktus__link"><a href="#">Kaktus Prod.</a></div>
-          <div class="footer__kaktus__cyber">
-            <p>CyberMaxClub</p>
-            <p>2020</p>
+        <div class="footer__kaktus">
+          <div class="footer__kaktus__wrapper">
+            <div class="footer__kaktus__link"><a href="#">Kaktus Prod.</a></div>
+            <div class="footer__kaktus__cyber">
+              <p>CyberMaxClub</p>
+              <p>2020</p>
+            </div>
           </div>
         </div>
       </div>
