--- a/src/index.html
+++ b/src/index.html
@@ -33,47 +33,43 @@
         </div>
       </nav>
     </header>
-    <section class="promo">
-      <div class="promo__overlay"></div>
-      <div class="slider">
-        <div class="slider__wrapper">
-          <div class="slider__item">
-            <div class="slider__data">
-              <div class="slider__title">Первая всеукраинская клубная лига по CS:GO</div>
-              <div class="slider__time">23 июля | 2020</div>
-              <div class="slider__text">
+    <section class="carousel">
+      <div class="carousel__overlay"></div>
+      <div class="container">
+        <div class="carousel__inner">
+          <div class="carousel__item">
+            <div class="carousel__data">
+              <div class="carousel__title">Первая всеукраинская клубная лига по CS:GO</div>
+              <div class="carousel__time">23 июля | 2020</div>
+              <div class="carousel__text">
                 В лиге будут соревноваться 12 лучших клубов с 12-ти городов Украины! Регистрируйся и играй за звание чемпиона клубной лиги с лучшего
                 клуба нашего города - <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
           </div>
-          <div class="slider__item">
-            <div class="slider__data">
-              <div class="slider__title">Тестируем новую систему!</div>
-              <div class="slider__time">15 июля | 2020</div>
-              <div class="slider__text">
+          <div class="carousel__item">
+            <div class="carousel__data">
+              <div class="carousel__title">Тестируем новую систему!</div>
+              <div class="carousel__time">15 июля | 2020</div>
+              <div class="carousel__text">
                 Удалённое бронирование, личный аккаунт игрока, ещё более быстрая скорость работы - лаунчер SENET, скоро в
                 <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>.
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
           </div>
-          <div class="slider__item">
-            <div class="slider__data">
-              <div class="slider__title">RED BULL FLICK</div>
-              <div class="slider__time">8 июля | 2020</div>
-              <div class="slider__text">
-                RED BULL FLICK – це турнір з CS:GO, де на тебе чекає новий ігровий режим, створений спеціально для команд з двох гравців. Основна мета
-                в RED BULL FLICK - захопити та утримувати прапор. Для перемоги, тобі необхідно віднести його в спеціальну зону і утримувати протягом
-                45 секунд. Офіційний хештег турніру: #RedBullFlick
+          <div class="carousel__item">
+            <div class="carousel__data">
+              <div class="carousel__title">RED BULL FLICK</div>
+              <div class="carousel__time">8 июля | 2020</div>
+              <div class="carousel__text">
+                RED BULL FLICK – це турнір з CS:GO, де на тебе чекає новий ігровий режим, створений спеціально для команд з двох гравців.
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
           </div>
         </div>
-        <a class="slider__control slider__control_left" href="#" role="button"></a>
-        <a class="slider__control slider__control_right" href="#" role="button"></a>
       </div>
     </section>
     <section class="merit">
@@ -218,7 +214,7 @@
                 <span>40 грн</span>
               </div>
             </div>
-            <a href="#" class="js-open-modal" data-modal="1"><button class="button button__reserve">ЗАБРОНИРОВАТЬ</button></a>
+            <a href="#" class="js-open-modal" data-modal="1"><button class="button button__reserve button__reserve_ps">ЗАБРОНИРОВАТЬ</button></a>
           </div>
           <div class="reserve__pc">
             <div class="reserve__title">GAME PC PRO</div>
@@ -264,15 +260,6 @@
         <input name="phone" type="tel" class="form-input__phone" tabindex="0" pattern="^[ 0-9]+$" placeholder="Введите ваш телефон" required />
         <input name="theme" type="hidden" class="form-input__theme" value="Бронь с сайта" />
         <button type="submit" class="form-input__button button button__reserve" value="Отправить">OТПРАВИТЬ</button>
-        <!-- <input type="submit" class="form-input__button" value="Отправить" /> -->
-        <!-- <button data-modal="2" type="submit" value="Отправить" class="button button__reserve js-open-modal js-modal-close form-input__button">
-          ОТПРАВИТЬ
-        </button> -->
-        <!-- <input name="name" placeholder="Имя" type="name" />
-        <input name="phone" placeholder="Телефон" type="tell" />
-        <input name="email" placeholder="E-mail" type="email" />
-        <input name="message" placeholder="Пожелания" type="text" /> -->
-        <!-- <a href="#" class="js-open-modal" data-modal="2"><button class="button button__reserve js-modal-close">ОТПРАВИТЬ</button></a> -->
       </form>
     </div>
     <div class="modal modal__thanks" data-modal="2">
@@ -285,6 +272,7 @@
     </div>
     <!-- Подложка под модальным окном -->
     <div class="overlay js-overlay-modal"></div>
+    <div class="elfsight-app-45515f57-6f90-4f87-adb7-cae9651101a3"></div>
     <footer class="footer" id="footer">
       <div class="footer__wrapper">
         <div class="footer__data">
@@ -297,7 +285,7 @@
             <a href="mail"><img src="img/icons/mail.png" alt="mail" class="footer__mail" /><span>office@cybermax.club</span> </a>
           </div>
           <div class="footer__place">
-            <div class="footer__title">ЖДЕМ ВАС 24|7 ПО АДРЕСУ</div>
+            <div class="footer__title">ЖДЕМ ВАС 24/7 ПО АДРЕСУ</div>
             <a href="#">г. Полтава, ул. Сковороды 2В</a>
           </div>
         </div>
@@ -312,19 +300,12 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="form__wrapper">
-      <form id="form-contact" method="POST" class="form-element" autocomplete="off">
-        <p class="form-title">Закажите обратный звонок и наш консультант свяжется с вами</p>
-        <p class="form-message"></p>
-        <input name="name" type="text" class="form-input__name" tabindex="0" placeholder="Введите ваше имя" required />
-        <input name="phone" type="tel" class="form-input__phone" tabindex="0" pattern="^[ 0-9]+$" placeholder="Введите ваш телефон" required />
-        <input name="theme" type="hidden" class="form-input__theme" value="Заявка с сайта" />
-        <input type="submit" class="form-input__button" value="Отправить" />
-      </form>
-    </div> -->
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/platform.js" defer></script>
+  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.min.js"></script>
 </html>
-
 <!-- office@cybermax.club cybermax123 -->
