--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <header>
+      <h1>check</h1>
       <nav class="menu">
         <div class="menu__logo">
           <a href=""><img src="img/icons/logo.png" alt="logo" /></a>
