--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
         <div class="carousel__inner">
           <div class="carousel__item">
             <div class="carousel__data">
-              <div class="carousel__title">Первая всеукраинская клубная лига по CS:GO</div>
-              <div class="carousel__time">23 июля | 2020</div>
+              <div class="carousel__title">Киберспорт в Украине официально признан видом спорта</div>
+              <div class="carousel__time">8 октября | 2020</div>
               <div class="carousel__text">
-                В лиге будут соревноваться 12 лучших клубов с 12-ти городов Украины! Регистрируйся и играй за звание чемпиона клубной лиги с лучшего
-                клуба нашего города - <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>
+                В Украине профессиональную игру в компьютерные игры (киберспорт) признали официальным видом спорта. Об этом заявил заместитель
+                министра цифровой трансформации <a href="https://www.facebook.com/bornyakov">Александр Борняков</a>.
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
@@ -53,7 +53,7 @@
               <div class="carousel__title">Тестируем новую систему!</div>
               <div class="carousel__time">15 июля | 2020</div>
               <div class="carousel__text">
-                Удалённое бронирование, личный аккаунт игрока, ещё более быстрая скорость работы - лаунчер SENET, скоро в
+                Удалённое бронирование, личный аккаунт игрока, ещё более быстрая скорость работы - лаунчер SENET, уже в
                 <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>.
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
@@ -118,22 +118,21 @@
         <h2 class="title" id="news">Новости</h2>
         <div class="line"></div>
         <div class="news__wrapper">
-          <!-- <div class="news__item">
+          <div class="news__item">
             <div class="news__img">
-              <img src="img/2x2.jpg" alt="photo_news" />
+              <img src="img/cybersport.jpg" alt="photo_news" />
             </div>
             <div class="news__data">
-              <div class="news__title">RED BULL FLICK</div>
-              <div class="news__time">8 июля | 2020</div>
+              <div class="news__title">Киберспорт в Украине официально признан видом спорта</div>
+              <div class="news__time">8 октября | 2020</div>
               <div class="news__text">
-                RED BULL FLICK – це турнір з CS:GO, де на тебе чекає новий ігровий режим, створений спеціально для команд з двох гравців. Основна мета
-                в RED BULL FLICK - захопити та утримувати прапор. Для перемоги, тобі необхідно віднести його в спеціальну зону і утримувати протягом
-                45 секунд. Офіційний хештег турніру: #RedBullFlick Незмінний для Red Bull дух змагань у запеклому протистоянні та море веселощів – це
-                лише частина того, що отримають учасники RED BULL FLICK.
+                Киберспорт в Украине официально признан видом спорта Для нашей страны это исторический момент, ведь киберспорт - это уже давно не
+                просто "стрелялки", а фундаментальный элемент современной цифровой культуры. Им увлечены примерно 600 млн человек, среди которых и
+                миллионы украинцев и мы гордимся возможностью представлять и всячески его развивать в нашем славном городе.
               </div>
             </div>
           </div>
-          <div class="line line__news"></div> -->
+          <div class="line line__news"></div>
           <div class="news__item">
             <div class="news__img">
               <img src="img/uecl.jpg" alt="photo_news" />
@@ -168,7 +167,7 @@
             </div>
           </div>
           <div class="line line__news"></div>
-          <div class="news__item">
+          <!-- <div class="news__item">
             <div class="news__img">
               <img src="img/2x2.jpg" alt="photo_news" />
             </div>
@@ -182,7 +181,7 @@
                 лише частина того, що отримають учасники RED BULL FLICK.
               </div>
             </div>
-          </div>
+          </div>        OLD NEWS ITEM-->
         </div>
       </div>
     </section>
@@ -297,7 +296,7 @@
     </div>
     <!-- Подложка под модальным окном -->
     <div class="overlay js-overlay-modal"></div>
-    <div class="elfsight-app-45515f57-6f90-4f87-adb7-cae9651101a3"></div>
+    <!-- <div class="elfsight-app-45515f57-6f90-4f87-adb7-cae9651101a3"></div> -->
     <footer class="footer" id="footer">
       <div class="footer__wrapper">
         <div class="footer__data">
