--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>CyberMax Club</title>
+    <title>Комп'ютерный клуб | CyberMax Полтава</title>
     <link rel="shortcut icon" href="img/icons/ico.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-181214091-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-181214091-1');
+    </script>
   </head>
 
   <body>
@@ -39,6 +49,16 @@
         <div class="carousel__inner">
           <div class="carousel__item">
             <div class="carousel__data">
+              <div class="carousel__title">ROG Esports Club League</div>
+              <div class="carousel__time">16 ноября | 2020</div>
+              <div class="carousel__text">
+                В Украине стартует второй сезон ROG Esports Club League. Лига пройдет в трех дисциплинах CS:GO, DOTA 2 и VALORANT.
+              </div>
+              <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <div class="carousel__data">
               <div class="carousel__title">Киберспорт в Украине официально признан видом спорта</div>
               <div class="carousel__time">8 октября | 2020</div>
               <div class="carousel__text">
@@ -55,16 +75,6 @@
               <div class="carousel__text">
                 Удалённое бронирование, личный аккаунт игрока, ещё более быстрая скорость работы - лаунчер SENET, уже в
                 <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>.
-              </div>
-              <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
-            </div>
-          </div>
-          <div class="carousel__item">
-            <div class="carousel__data">
-              <div class="carousel__title">RED BULL FLICK</div>
-              <div class="carousel__time">8 июля | 2020</div>
-              <div class="carousel__text">
-                RED BULL FLICK – це турнір з CS:GO, де на тебе чекає новий ігровий режим, створений спеціально для команд з двох гравців.
               </div>
               <a href="#news"><button class="button button__slider">ЧИТАТЬ</button></a>
             </div>
@@ -120,6 +130,31 @@
         <div class="news__wrapper">
           <div class="news__item">
             <div class="news__img">
+              <img src="img/news4.png" alt="photo_news" />
+            </div>
+            <div class="news__data">
+              <div class="news__title">ROG Esports Club League</div>
+              <div class="news__time">16 ноября | 2020</div>
+              <div class="news__text">
+                В Украине стартует второй сезон ROG Esports Club League. Лига пройдет в трех дисциплинах CS:GO, DOTA 2 и VALORANT. Участники разыграют
+                призовой фонд на сумму более 190 000 гривен. <br />
+                Титульный партнер лиги Republic of Gamers.<br />
+                <br />
+                РЕГИСТРАЦИЯ: <br />
+
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSetQ682253zb9e4n4tzHv3Sp0IFLIAxVyd7uUN0CFe0lvmpIw/viewform"
+                  >Зарегистрироваться по CS:GO</a
+                ><br />
+
+                <a href="https://forms.gle/5Q9z5L9pBBG2yopt9">Зарегистрироваться по DOTA 2</a><br />
+
+                <a href="https://forms.gle/6fc9uDFW7Gxq6Dbx9">Зарегистрироваться по Valorant</a>
+              </div>
+            </div>
+          </div>
+          <div class="line line__news"></div>
+          <div class="news__item">
+            <div class="news__img">
               <img src="img/cybersport.jpg" alt="photo_news" />
             </div>
             <div class="news__data">
@@ -151,22 +186,7 @@
             </div>
           </div>
           <div class="line line__news"></div>
-          <div class="news__item">
-            <div class="news__img">
-              <img src="img/senet.jpg" alt="photo_news" />
-            </div>
-            <div class="news__data">
-              <div class="news__title">Тестируем новую систему</div>
-              <div class="news__time">15 июля | 2020</div>
-              <div class="news__text">
-                Удалённое бронирование, личный аккаунт игрока, ещё более быстрая скорость работы - лаунчер SENET, скоро в
-                <a href="https://www.instagram.com/cybermax.poltava/">CyberMax!</a>. <br />
-                Целую неделю посетители нашего клуба могли стать первыми пользователями лаунчера Senet. Тестирование прошло удачно, и скоро мы
-                запустим её в полную силу, следите за обновлениями!
-              </div>
-            </div>
-          </div>
-          <div class="line line__news"></div>
+
           <!-- <div class="news__item">
             <div class="news__img">
               <img src="img/2x2.jpg" alt="photo_news" />
@@ -317,7 +337,7 @@
           <div class="footer__kaktus__wrapper">
             <div class="footer__kaktus__link"><a href="#">Kaktus Prod.</a></div>
             <div class="footer__kaktus__cyber">
-              <p>CyberMaxClub</p>
+              <p>Комп'ютерный клуб | CyberMax Полтава</p>
               <p>2020</p>
             </div>
           </div>
